# processingCode

./: .gitignore  dockerNoRecordEuclid.launch  dockerRecordEuclid.launch  excuse-me-post-process-pipeline_1.0.1_amd64.deb  excuseMe.autoware.ai.repos  excuseMeDataRecordTracks.launch  excuseMeDataTrackNoRecord.launch  localDockerRecord.launch  noRecordTrackEuclid.launch  oldUkf.launch  trackRecordEuclid.launch  ukfTrack.launch
ClusterScripts/: runMultiple.sh  something_batch.sh
LaunchFiles/: BoltOn.launch  BoltOnConcatPoints.rviz  ConcatPtCldBoltOn.launch  SOADS_ped.launch  topUkfNoMap.launch  trackRecordEuclid.launch  ukfTopOnly.launch  ukfTrack.launch  ukfTrackNoMap.launch
Maps/CommonRoadMaps/: DC1.xml  DC2.xml  RS.xml
Maps/LaneletMaps/: R2.osm  dc_1.osm
Maps/OpenDriveMaps/: CLT1.xodr  R2.xodr  dc_1.xodr  dc_2.xodr
Notes/: CompleteLaunchFileNotes.odt  DockerNotes.odt  LatLonLocations.odt  MapConversionNotes.odt  RearLidarOff.csv  Roanoke_2_RearLidarOff_Rois  UnindexedBagFileCodes  baseLinktoRearLidarLeft  slow_merge_file_codes
SmallBatch/: data_roi_4916_12452.launch  data_roi_4943_7441.launch
core_perception-as-master-gpsins_localizer/gpsins_localizer/: CMakeLists.txt  README.md  nodelets.xml  package.xml
core_perception-as-master-gpsins_localizer/gpsins_localizer/config/: params.yaml
core_perception-as-master-gpsins_localizer/gpsins_localizer/include/gpsins_localizer/: gpsins_localizer_nodelet.hpp
core_perception-as-master-gpsins_localizer/gpsins_localizer/launch/: gpsins_localizer_node.launch  lgsvl_simulation.launch  map_frame_example.launch
core_perception-as-master-gpsins_localizer/gpsins_localizer/scripts/: lgsvl_converter.py
core_perception-as-master-gpsins_localizer/gpsins_localizer/src/: gpsins_localizer_node.cpp  gpsins_localizer_nodelet.cpp
core_perception-as-master-gpsins_localizer/gpsins_localizer/test/: rostest_integration_test.cpp  rostest_launch.test
excuse_me_pkg/: CMakeLists.txt  excuseMeTracking.rviz  package.xml
excuse_me_pkg/OldTrackingResults/: .~lock._trackingResult.csv#  .~lock.short_trackingResult.csv#
excuse_me_pkg/OldTrackingResults/ForGibran/TrackingResultsKey/: trackingResultKey.txt
excuse_me_pkg/TrackingResultsKey/: trackingResultKey.txt
excuse_me_pkg/config/: excuseMeTracking.rviz
excuse_me_pkg/launch/: BoltOn.launch  BoltOnConcatPoints.rviz  ConcatPtCldBoltOn.launch  data_roi_12501_1994.launch  data_roi_17268_11000.launch  dockerNoRecordEuclid.launch  dockerRecordEuclid.launch  excuseMeTracking.rviz  noMapTesting.launch  noRecordTrackEuclid.launch  oldUkf.launch  ukfDebug.launch  ukfTopOnly.launch  ukfTrack.launch
excuse_me_pkg/src/: dumpTextSample.cpp
excuse_me_pkg/urdf/: excuse_me.urdf
hd_map_stf/: CMakeLists.txt  package.xml
hd_map_stf/launch/: hd_map_tf.launch
hd_map_stf/nodes/: hd_map_stf.cpp
hd_map_stf/src/: hd_map_stf.cpp
maps/CommonRoadMaps/: charlotte_1.xml  charlotte_2.xml  roanoke_2.xml
maps/LaneletMaps/: charlotte_1.osm  charlotte_2.osm  dc_2.osm  roanoke_1.osm
maps/OpenDriveMaps/: RS_Cameron.xodr  charlotte_2.xodr  roanoke_1.xodr
notes/: LatLonLocations.odt  VTTI_Excuse_Me_Merge_Summaires_2021-12-06 18 01 48 UTC.csv
tf_pointcloud/: CMakeLists.txt  package.xml
tf_pointcloud/launch/: rosbag_work_cpp.launch
tf_pointcloud/scripts/: rosbag_work.py  tf_pointcloud.py
tf_pointcloud/src/: rosbag_work_cpp.cpp  rosbag_work_cpp_simple.cpp
visualize_subject_vehicle_velo/: CMakeLists.txt  package.xml
visualize_subject_vehicle_velo/launch/: visualize_subject_vehicle_velo.launch
visualize_subject_vehicle_velo/src/: visualizeSubjectVehicleVelo.cpp
