<package format="2">
  <name>gpsins_localizer</name>
  <version>1.12.0</version>
  <description>Localization module based on GPS-INS data</description>
  <author email="icolwell@autonomoustuff.com">Ian Colwell</author>
  <maintainer email="icolwell@autonomoustuff.com">Ian Colwell</maintainer>
  <license>MIT</license>
	
	<buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>geographiclib</depend>
  <depend>nodelet</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>novatel_gps_msgs</depend>
  <depend>novatel_oem7_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roslint</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
